# three-layer-agent

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  workspace_template.md
config/: agent_config.json
include/: setup.hpp
include/agent/: advisor_agent.hpp  agent_context.hpp  agent_state.hpp  api_client.hpp  async_message_bus.hpp  circuit_breaker.hpp  conversation_context.hpp  dependency_analyzer.hpp  director_agent.hpp  director_decomposer.hpp  event_bus.hpp  exceptions.hpp  experience_db.hpp  file_type_handler.hpp  global_summary.hpp  imanager.hpp  manager_agent.hpp  manager_dispatcher.hpp  manager_pool.hpp  models.hpp  parallel_executor.hpp  preflight_checker.hpp  quick_fixer.hpp  reflection.hpp  request_deduplicator.hpp  retry_policy.hpp  skill_registry.hpp  supervisor_agent.hpp  task_context.hpp  task_router.hpp  tool_cache.hpp  tool_composer.hpp  tool_registry.hpp  worker_agent.hpp  worker_executor.hpp
include/api/: batch_api_client.hpp
include/cli/: command_system.hpp  commands.hpp  readline_helper.hpp
include/distributed/: node_registry.hpp  result_collector.hpp  task_dispatcher.hpp
include/indexer/: code_index.hpp  indexer_tools.hpp  simple_indexer.hpp  sqlite_indexer.hpp  treesitter_indexer.hpp
include/utils/: async_message_bus.hpp  env_knowledge.hpp  experience_manager.hpp  experience_replay_engine.hpp  file_lock.hpp  health_server.hpp  incremental_engine.hpp  json_utils.hpp  load_balancer.hpp  logger.hpp  memory_store.hpp  message_bus.hpp  multimodal_handler.hpp  parallel_scheduler.hpp  performance_monitor.hpp  prompt_loader.hpp  prompt_optimizer.hpp  prompt_template.hpp  result_cache.hpp  structured_log.hpp  task_fingerprint.hpp  task_rules.hpp  tfidf.hpp  thread_pool.hpp  token_budget_allocator.hpp  tool_set.hpp  tool_stats.hpp  utf8_fstream.hpp  workspace.hpp
prompts/: AGENTS.md  base.md  director_decompose_system.md  director_review_system.md  director_synthesise_system.md  director_system.md  manager_decompose_system.md  manager_validate_system.md  supervisor_system.md  worker_system.md
prompts/director/: SOUL.md
prompts/director/skills/: classify.md  conversational.md  decompose.md  review.md  synthesise.md
prompts/manager/: SOUL.md
prompts/manager/skills/: decompose.md  validate.md
prompts/skills/: analysis.md  code_exec.md  file_ops.md  memory_ops.md  system_ops.md
prompts/supervisor/: SOUL.md
prompts/supervisor/skills/: evaluate.md
prompts/variants/: director-decompose.md  manager-decompose.md
prompts/worker/: SOUL.md
prompts/worker/skills/: file_operations.md  system_query.md  tool_execution.md
src/: main.cpp  setup.cpp
src/agent/: advisor_agent.cpp  api_client.cpp  async_message_bus.cpp  circuit_breaker.cpp  conversation_context.cpp  dependency_analyzer.cpp  director_agent.cpp  director_decomposer.cpp  event_bus.cpp  experience_db.cpp  file_type_handler.cpp  global_summary.cpp  manager_agent.cpp  manager_dispatcher.cpp  manager_pool.cpp  models.cpp  parallel_executor.cpp  preflight_checker.cpp  quick_fixer.cpp  reflection.cpp  request_deduplicator.cpp  retry_policy.cpp  skill_registry.cpp  supervisor_agent.cpp  task_context.cpp  task_router.cpp  tool_cache.cpp  tool_composer.cpp  tool_registry.cpp  worker_agent.cpp  worker_executor.cpp
src/api/: batch_api_client.cpp
src/cli/: command_registry.cpp  command_system.cpp  readline_helper.cpp  tui_input.cpp  tui_input.hpp
src/indexer/: indexer_tools.cpp  simple_indexer.cpp  sqlite_indexer.cpp  treesitter_indexer.cpp
src/utils/: async_message_bus.cpp  experience_replay_engine.cpp  file_lock.cpp  logger.cpp  memory_store.cpp  message_bus.cpp  multimodal_handler.cpp  structured_log.cpp  token_budget_allocator.cpp  tool_set.cpp  workspace.cpp
tests/: stub_api_client.cpp  test_all_tools_chinese.cpp  test_chinese_support.cpp  test_director.cpp  test_getcwd_chinese.cpp  test_improvements.cpp  test_integration.cpp  test_manager.cpp  test_models.cpp  test_phase2.cpp  test_phase8_10.cpp  test_phase_integration.cpp  test_prompt_loader.cpp  test_real_indexer.cpp  test_skill_registry.cpp  test_success_metrics.cpp  test_thread_pool.cpp  test_v2_infra.cpp  test_worker.cpp  test_workspace_chinese.cpp  test_workspace_integration.cpp
